tests/compliance/valid/05-decision.alp
!alp-version: 1.0.0

@decision
  id: use-postgres
  description: "Use PostgreSQL for persistence"
