tests/compliance/invalid/04-unknown-directive.alp
!alp-version: 8.0.0

@project
  id: unknown-directive
  status: development

!asret: status == "production"
